[package]
name = "calc-graph"
description = "Efficient calculations on a graph of values"
version = "0.4.2"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
license = "MIT"
build = "build/build.rs"
edition = "2018"

[profile.release]
debug = true

[dependencies]
bit-set = "0.5"
either = "1"
parking_lot = "0.6"
take_mut = "0.2"

[build-dependencies]
itertools = "0.7"

[[bin]]
name = "demo"
path = "bin/demo.rs"
